--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
     "build": "webpack --config webpack.config.js"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.20.0",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   },
@@ -13,6 +16,7 @@
     "@babel/core": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-react": "^7.23.3",
+    "@reduxjs/toolkit": "^1.9.7",
     "babel-loader": "^9.1.3",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
