--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
+    "redux-logger": "^3.0.6",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   },
