--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.0-beta.1",
     "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.6.2",
     "babel-loader": "^9.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
